[package]
name = "advent-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

members = ["day-*"]

[workspace.dependencies]
rayon = "1.8.0"
indicatif = "0.17.7"
console = "0.15.7"
num = "0.4.1"
